derive/tests/samples/empty.stderr
error: empty structs are not supported
 --> tests/samples/empty.rs:3:10
  |
3 | #[derive(Attributes)]
  |          ^^^^^^^^^^
  |
  = note: this error originates in the derive macro `Attributes` (in Nightly builds, run with -Z macro-backtrace for more info)
