derive/tests/samples/empty.rs
use rkvc_derive::Attributes;

#[derive(Attributes)]
struct EmptyStruct {}

fn main() {}
